--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 before_install:
   - composer self-update
   - composer clear-cache
-  - wget https://phar.phpunit.de/phpunit-6.phar
+  - wget -O phpunit.phar https://phar.phpunit.de/phpunit-6.4.phar
 
 install:
   - travis_retry composer update --no-interaction --no-ansi --no-progress --no-suggest
