--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "symfony/console": "^3.3"
   },
   "require-dev": {
-    "mikey179/vfsStream": "^1.6.5"
+    "mikey179/vfsstream": "^1.6.5"
   },
   "autoload": {
     "classmap": [
