--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,9 @@
+/.github        export-ignore
+/.php_cs.dist   export-ignore
+/build          export-ignore
+/build.xml      export-ignore
+/phive.xml      export-ignore
+/phpunit.xml    export-ignore
+/tests          export-ignore
+
 *.php diff=php
